--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # C-b <default Prefix> conflicts with vim
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+#unbind C-b
+#set-option -g prefix C-a
+#bind-key C-a send-prefix
 
 # split panse using | and -
 
