--- a/tmux.conf
+++ b/tmux.conf
@@ -1,27 +1,14 @@
-# C-b <default Prefix> conflicts with vim
-#unbind C-b
-#set-option -g prefix C-a
-#bind-key C-a send-prefix
-
-# split panse using | and -
-
+# Split panes using | and -
 bind | split-window -h
-bind - split-window -v 
+bind - split-window -v
 
-# start numbering at 1
-set -g base-index 1
-
-#Vi copypaste mode
-set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-
-# hjkl pane traversal
+# vim pane traversal
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# reload config
-bind r source-file ~/.tmux.conf \; display-message "Tmux Config reloaded..."
+#reload config
+bind r source-file ~/.tmux.conf \; display-message "Tmux config reloaded..."
 
+set -g mouse on
